// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with children 1`] = `
<DocumentFragment>
  <div>
    <svg
      class="sc-bdVaJa kyDpel"
      viewBox="0 0 500 300"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clippath
          id="clip-path-svg"
        >
          <rect
            height="280"
            width="490"
            x="0"
            y="10"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#clip-path-svg)"
      >
        <rect
          height="200"
          width="100"
          x="0"
          y="10"
        />
        <circle
          cx="300"
          cy="100"
          r="100"
        />
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`renders with an object for padding 1`] = `
<DocumentFragment>
  <div>
    <svg
      class="sc-bdVaJa kyDpel"
      viewBox="0 0 600 600"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs>
        <clippath
          id="clip-path-svg"
        >
          <rect
            height="560"
            width="540"
            x="40"
            y="10"
          />
        </clippath>
      </defs>
      <g
        clip-path="url(#clip-path-svg)"
      />
    </svg>
  </div>
</DocumentFragment>
`;
